; ModuleID = '/home/carl/AnghaBench/freebsd/sys/powerpc/powermac/extr_macgpio.c_macgpio_deactivate_resource.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/powerpc/powermac/extr_macgpio.c_macgpio_deactivate_resource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resource = type { i32 }
%struct.macgpio_softc = type { i32 }
%struct.macgpio_devinfo = type { i64 }

@SYS_RES_IRQ = common dso_local global i32 0, align 4
@ENXIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i32, %struct.resource*)* @macgpio_deactivate_resource to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @macgpio_deactivate_resource(i32 %0, i32 %1, i32 %2, i32 %3, %struct.resource* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.resource*, align 8
  %12 = alloca %struct.macgpio_softc*, align 8
  %13 = alloca %struct.macgpio_devinfo*, align 8
  %14 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store %struct.resource* %4, %struct.resource** %11, align 8
  %15 = load i32, i32* %7, align 4
  %16 = call %struct.macgpio_softc* @device_get_softc(i32 %15)
  store %struct.macgpio_softc* %16, %struct.macgpio_softc** %12, align 8
  %17 = load i32, i32* %8, align 4
  %18 = call %struct.macgpio_devinfo* @device_get_ivars(i32 %17)
  store %struct.macgpio_devinfo* %18, %struct.macgpio_devinfo** %13, align 8
  %19 = load i32, i32* %9, align 4
  %20 = load i32, i32* @SYS_RES_IRQ, align 4
  %21 = icmp ne i32 %19, %20
  br i1 %21, label %22, label %24

22:                                               ; preds = %5
  %23 = load i32, i32* @ENXIO, align 4
  store i32 %23, i32* %6, align 4
  br label %53

24:                                               ; preds = %5
  %25 = load %struct.macgpio_devinfo*, %struct.macgpio_devinfo** %13, align 8
  %26 = getelementptr inbounds %struct.macgpio_devinfo, %struct.macgpio_devinfo* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = icmp sge i64 %27, 0
  br i1 %28, label %29, label %47

29:                                               ; preds = %24
  %30 = load %struct.macgpio_softc*, %struct.macgpio_softc** %12, align 8
  %31 = getelementptr inbounds %struct.macgpio_softc, %struct.macgpio_softc* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = load %struct.macgpio_devinfo*, %struct.macgpio_devinfo** %13, align 8
  %34 = getelementptr inbounds %struct.macgpio_devinfo, %struct.macgpio_devinfo* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = call i32 @bus_read_1(i32 %32, i64 %35)
  store i32 %36, i32* %14, align 4
  %37 = load i32, i32* %14, align 4
  %38 = and i32 %37, -129
  store i32 %38, i32* %14, align 4
  %39 = load %struct.macgpio_softc*, %struct.macgpio_softc** %12, align 8
  %40 = getelementptr inbounds %struct.macgpio_softc, %struct.macgpio_softc* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = load %struct.macgpio_devinfo*, %struct.macgpio_devinfo** %13, align 8
  %43 = getelementptr inbounds %struct.macgpio_devinfo, %struct.macgpio_devinfo* %42, i32 0, i32 0
  %44 = load i64, i64* %43, align 8
  %45 = load i32, i32* %14, align 4
  %46 = call i32 @bus_write_1(i32 %41, i64 %44, i32 %45)
  br label %47

47:                                               ; preds = %29, %24
  %48 = load i32, i32* %7, align 4
  %49 = load i32, i32* %9, align 4
  %50 = load i32, i32* %10, align 4
  %51 = load %struct.resource*, %struct.resource** %11, align 8
  %52 = call i32 @bus_deactivate_resource(i32 %48, i32 %49, i32 %50, %struct.resource* %51)
  store i32 %52, i32* %6, align 4
  br label %53

53:                                               ; preds = %47, %22
  %54 = load i32, i32* %6, align 4
  ret i32 %54
}

declare dso_local %struct.macgpio_softc* @device_get_softc(i32) #1

declare dso_local %struct.macgpio_devinfo* @device_get_ivars(i32) #1

declare dso_local i32 @bus_read_1(i32, i64) #1

declare dso_local i32 @bus_write_1(i32, i64, i32) #1

declare dso_local i32 @bus_deactivate_resource(i32, i32, i32, %struct.resource*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
